Add section on memory-efficient representation to HFL lab

--- a/lab/lab_2_hfl/horizontal-federated-learning.ipynb
+++ b/lab/lab_2_hfl/horizontal-federated-learning.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tutorial 1A"
+    "# Lab 2: HFL"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The first lab tutorial presents the findings and uses part of the experimental methodology from the [original Federated Learning](https://arxiv.org/pdf/1602.05629.pdf) paper. In horizontal federated learning, all clients have access to the same complete model architecture, which they train on local data, sharing information about model updates but not their data.\n",
+    "This lab presents the findings and uses part of the experimental methodology from the [original Federated Learning](https://arxiv.org/pdf/1602.05629.pdf) paper. In horizontal federated learning, all clients have access to the same complete model architecture, which they train on local data, sharing information about model updates but not their data.\n",
     "\n",
     "Before starting, make sure to follow the overall setup for the labs."
    ]
@@ -36,7 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Before anything else, we download, load, and preprocess the [MNIST dataset](https://archive.ics.uci.edu/dataset/683/mnist+database+of+handwritten+digits), which we will use for all experiments."
+    "Before anything else, we download, load, and preprocess the [MNIST dataset](https://archive.ics.uci.edu/dataset/683/mnist+database+of+handwritten+digits), which we will use for the following experiments."
    ]
   },
   {
@@ -508,10 +508,236 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Bonus: Memory-efficient memory representations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Below, we test the effect of representing a (small) language model using different numerical data types for the weights.\n",
+    "\n",
+    "We use the Hugging Face Transformers framework to load and interface with the model variants."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "from time import perf_counter\n",
+    "\n",
+    "import torch\n",
+    "from transformers import (AutoModelForCausalLM, AutoTokenizer,\n",
+    "                          BitsAndBytesConfig, PreTrainedModel)\n",
+    "\n",
+    "if torch.cuda.is_available():\n",
+    "    device = torch.device(\"cuda\")\n",
+    "elif torch.mps.is_available():\n",
+    "    device = torch.device(\"mps\")\n",
+    "else:\n",
+    "    device = torch.device(\"cpu\")\n",
+    "\n",
+    "model_id = \"HuggingFaceTB/SmolLM3-3B\"\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_id)\n",
+    "tokenized_input = tokenizer(\n",
+    "    \"The most important concept in distributed deep learning is\", return_tensors=\"pt\").to(device)\n",
+    "input_ids = tokenized_input[\"input_ids\"]\n",
+    "attention_mask = tokenized_input[\"attention_mask\"]\n",
+    "\n",
+    "\n",
+    "def benchmark_model(model: PreTrainedModel, dtype_name: str) -> None:\n",
+    "    print(\"Data type: \", dtype_name)\n",
+    "\n",
+    "    memory_footprint_bytes = model.get_memory_footprint()\n",
+    "    print(\n",
+    "        f\"Memory footprint (MiB): {(memory_footprint_bytes / (1024 ** 2)):.2f}\")\n",
+    "\n",
+    "    # Warm-up run\n",
+    "    _ = model.generate(\n",
+    "        input_ids,\n",
+    "        attention_mask=attention_mask,\n",
+    "        max_new_tokens=5,\n",
+    "        # Avoid warnings\n",
+    "        temperature=None,\n",
+    "        top_p=None,\n",
+    "    )\n",
+    "\n",
+    "    start_time = perf_counter()\n",
+    "    outputs = model.generate(\n",
+    "        input_ids,\n",
+    "        attention_mask=attention_mask,\n",
+    "        max_new_tokens=64,\n",
+    "        do_sample=False,\n",
+    "        pad_token_id=tokenizer.eos_token_id,\n",
+    "        # Avoid warnings\n",
+    "        temperature=None,\n",
+    "        top_p=None,\n",
+    "    )\n",
+    "    elapsed_time = perf_counter() - start_time\n",
+    "    print(\n",
+    "        f\"Speed (tokens/s): {((outputs.numel() - input_ids.numel()) / elapsed_time):.2f}\")\n",
+    "\n",
+    "    output_text = \" \".join(tokenizer.decode(\n",
+    "        outputs[0], skip_special_tokens=True).split())\n",
+    "    print(\"Output:\", output_text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us load and test the model in standard single-precision (FP32) format."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9aa2ffb3cacb4d3bb70722f36fc5d1d5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data type:  FP32\n",
+      "Memory footprint (MiB): 11730.57\n",
+      "Speed (tokens/s): 59.75\n",
+      "Output: The most important concept in distributed deep learning is the concept of a \"model\" and the concept of \"distributed training\". A model is a mathematical function that maps inputs to outputs. In the context of deep learning, a model is a neural network that learns to map inputs to outputs through training. The model is typically represented as a set of weights and biases that\n"
+     ]
+    }
+   ],
+   "source": [
+    "benchmark_model(\n",
+    "    AutoModelForCausalLM.from_pretrained(model_id, device_map=device, dtype=torch.float32),\n",
+    "    \"FP32\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Up next, let us try a half-precision format (BF16 or FP16), which is often the default for trained language model weights (including the tested one):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "67c56f3d25d14056afa52fb361d9538c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data type:  BF16\n",
+      "Memory footprint (MiB): 5865.29\n",
+      "Speed (tokens/s): 100.24\n",
+      "Output: The most important concept in distributed deep learning is the idea of a \"model\" and how it is distributed across multiple devices. A model is a set of parameters that define the behavior of a neural network. In distributed deep learning, a model is typically split into smaller pieces, called \"modules,\" which are distributed across multiple devices. Each device has a copy of the\n"
+     ]
+    }
+   ],
+   "source": [
+    "benchmark_model(\n",
+    "    AutoModelForCausalLM.from_pretrained(model_id, device_map=device, dtype=torch.bfloat16),\n",
+    "    \"BF16\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Memory consumption is almost halved, speed is close to double, and output quality is maintained.\n",
+    "\n",
+    "Finally, we can try a quantized version that uses integers instead of floats, further halving precision.\n",
+    "Since there is no native INT8 version of our model, we will use BitsAndBytes to quantize and dequantize the model on the fly.\n",
+    "Compared to a properly pre-quantized model, we will lose some memory savings and, more crucially, our generation speed will degrade somewhat compared to the single-precision case:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7bef5b46393f482f91448fa6ecb91942",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data type:  INT8\n",
+      "Memory footprint (MiB): 3183.29\n",
+      "Speed (tokens/s): 26.38\n",
+      "Output: The most important concept in distributed deep learning is the concept of a \"model\" and how it is distributed across multiple devices. In this context, a \"model\" is a set of parameters that define the behavior of a deep learning model. These parameters are typically learned during training and are used to make predictions on new data. When a model is distributed across multiple devices\n"
+     ]
+    }
+   ],
+   "source": [
+    "benchmark_model(\n",
+    "    AutoModelForCausalLM.from_pretrained(\n",
+    "        model_id, device_map=device, quantization_config=BitsAndBytesConfig(load_in_8bit=True)),\n",
+    "    \"INT8\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that, even with a pre-quantized model, to achieve further improvements in generation speed, we would also need hardware that supports lower-than-single-precision formats natively."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
