Add updated homework 1, make small updates to labs 1 & 2

--- a/lab/lab_2_hfl/horizontal-federated-learning.ipynb
+++ b/lab/lab_2_hfl/horizontal-federated-learning.ipynb
@@ -396,7 +396,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class FedSgdGradientServer(DecentralizedServer):\n",
+    "class FedSgdServer(DecentralizedServer):\n",
     "    def __init__(\n",
     "            self, lr: float,\n",
     "            client_subsets: list[Subset], client_fraction: float, seed: int) -> None:\n",
@@ -415,7 +415,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fedsgd_gradient_server = FedSgdGradientServer(0.02, sample_split, 0.2, 42)\n",
+    "fedsgd_gradient_server = FedSgdServer(0.02, sample_split, 0.2, 42)\n",
     "result_fedsgd_gradient = fedsgd_gradient_server.run(5)\n",
     "fedsgd_gradient_df = result_fedsgd_gradient.as_df()\n",
     "fedsgd_gradient_df"
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,34 +603,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9aa2ffb3cacb4d3bb70722f36fc5d1d5",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Data type:  FP32\n",
-      "Memory footprint (MiB): 11730.57\n",
-      "Speed (tokens/s): 59.75\n",
-      "Output: The most important concept in distributed deep learning is the concept of a \"model\" and the concept of \"distributed training\". A model is a mathematical function that maps inputs to outputs. In the context of deep learning, a model is a neural network that learns to map inputs to outputs through training. The model is typically represented as a set of weights and biases that\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "benchmark_model(\n",
     "    AutoModelForCausalLM.from_pretrained(model_id, device_map=device, dtype=torch.float32),\n",
@@ -646,34 +621,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "67c56f3d25d14056afa52fb361d9538c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Data type:  BF16\n",
-      "Memory footprint (MiB): 5865.29\n",
-      "Speed (tokens/s): 100.24\n",
-      "Output: The most important concept in distributed deep learning is the idea of a \"model\" and how it is distributed across multiple devices. A model is a set of parameters that define the behavior of a neural network. In distributed deep learning, a model is typically split into smaller pieces, called \"modules,\" which are distributed across multiple devices. Each device has a copy of the\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "benchmark_model(\n",
     "    AutoModelForCausalLM.from_pretrained(model_id, device_map=device, dtype=torch.bfloat16),\n",
@@ -693,34 +643,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7bef5b46393f482f91448fa6ecb91942",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Data type:  INT8\n",
-      "Memory footprint (MiB): 3183.29\n",
-      "Speed (tokens/s): 26.38\n",
-      "Output: The most important concept in distributed deep learning is the concept of a \"model\" and how it is distributed across multiple devices. In this context, a \"model\" is a set of parameters that define the behavior of a deep learning model. These parameters are typically learned during training and are used to make predictions on new data. When a model is distributed across multiple devices\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "benchmark_model(\n",
     "    AutoModelForCausalLM.from_pretrained(\n",
