Swap homework 1 parts to mirror labs

--- a/lab/homework_1/hw_1.ipynb
+++ b/lab/homework_1/hw_1.ipynb
@@ -18,11 +18,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For part A, fill in the code and answers within the notebook and save your changes.\n",
+    "For part A, create and archive the necessary Python scripts together.\n",
     "\n",
-    "For part B, create and archive the necessary Python/shell scripts together.\n",
+    "For part B, fill in the code and answers in the notebook, then save your changes.\n",
     "\n",
-    "Finally, upload the notebook and the archive to the assignment in ILIAS."
+    "Finally, upload an archive to the assignment in ILIAS containing the Python scripts for part A and the filled-out notebook for part B."
    ]
   },
   {
@@ -30,6 +30,68 @@
    "metadata": {},
    "source": [
     "## Part A (12 points)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise A1: Microbatch Pipeline Model Parallelism (7 points)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Implement pipeline parallelism with microbatches, as discussed during the lab.\n",
+    "\n",
+    "As with the other data/model parallelism examples, you will need a Python script for the nodes and a shell script to orchestrate execution.\n",
+    "\n",
+    "Be aware of the possibility of deadlocks: due to how `gloo` operates, it is possible to deadlock by having device 1 send $B_2$ to device 2 in the forward pass, and simultaneously, device 2 send $B_1$ in the backward pass.\n",
+    "Since both sends will await corresponding receives, the training will stop indefinitely.\n",
+    "\n",
+    "Use `isend` & `irecv`, the asynchronous (non-blocking) versions of `send` & `recv` in `torch.distributed`.\n",
+    "Each call of the two function returns a `Work` object, on which calling `wait()` blocks, if needed, until the message exchange finishes.\n",
+    "Add comments or text explaining how you expect your implementation to work and test that it runs for the same number of steps and model architecture as in class.\n",
+    "\n",
+    "Note that `torch.distributed`'s implementation of `gloo` does not currently support properly asynchronous communication even when using the corresponding primitives.\n",
+    "Thus, you will not see the same improvements in speed as with a backend like `nccl`.\n",
+    "\n",
+    "You may also use the fact that `torch` gradients naturally accumulate if not zeroed out.\n",
+    "Also, scaling the loss by a constant is equivalent to scaling the resulting gradients by the same constant.\n",
+    "\n",
+    "You can rely on receiving messages in the same order they get sent between any device pair.\n",
+    "The `(i)send/recv` functions all support a `tag` attribute to match messages explicitly.\n",
+    "Although using it is good practice, it is not required.\n",
+    "\n",
+    "You can refer to the [documentation](https://pytorch.org/docs/stable/distributed.html) and, if helpful, a related [tutorial](https://brsoff.github.io/tutorials/intermediate/dist_tuto.html) on the PyTorch website."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise A2: Joint Data & Model Parallelism (5 points)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Implement a training setup that uses data and model parallelism together.\n",
+    "\n",
+    "Create 2 pipelines of 3 stages running sequentially, where each stage works with 3 sequential micro-batches.\n",
+    "\n",
+    "Once again, add comments or text explaining your implementation and test it on the setting that mimics those from the class.\n",
+    "\n",
+    "You can use groups from `torch.distributed` to handle reduce operations between a subset of all workers."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part B (12 points)"
    ]
   },
   {
@@ -97,7 +159,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise A1: FedSGD and FedAvg variants (3 points)"
+    "### Exercise B1: FedSGD and FedAvg variants (3 points)"
    ]
   },
   {
@@ -181,7 +243,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise A2: Client number & fraction (4 points)"
+    "### Exercise B2: Client number & fraction (4 points)"
    ]
   },
   {
@@ -297,7 +359,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise A3: Local epoch count & (non-)IID data (5 points)"
+    "### Exercise B3: Local epoch count & (non-)IID data (5 points)"
    ]
   },
   {
@@ -450,68 +512,6 @@
     "    q1: Literal[\"worse\", \"better\", \"similar\"] = ...\n",
     "    \"Q2: Does 'New' significantly improve peak accuracy over 'Old'?\"\n",
     "    q2: bool = ..."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Part B (12 points)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Exercise B1: Microbatch Pipeline Model Parallelism (7 points)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Implement pipeline parallelism with microbatches, as discussed during the lab.\n",
-    "\n",
-    "As with the other data/model parallelism examples, you will need a Python script for the nodes and a shell script to orchestrate execution.\n",
-    "\n",
-    "Be aware of the possibility of deadlocks: due to how `gloo` operates, it is possible to deadlock by having device 1 send $B_2$ to device 2 in the forward pass, and simultaneously, device 2 send $B_1$ in the backward pass.\n",
-    "Since both sends will await corresponding receives, the training will stop indefinitely.\n",
-    "\n",
-    "Use `isend` & `irecv`, the asynchronous (non-blocking) versions of `send` & `recv` in `torch.distributed`.\n",
-    "Each call of the two function returns a `Work` object, on which calling `wait()` blocks, if needed, until the message exchange finishes.\n",
-    "Add comments or text explaining how you expect your implementation to work and test that it runs for the same number of steps and model architecture as in class.\n",
-    "\n",
-    "Note that `torch.distributed`'s implementation of `gloo` does not currently support properly asynchronous communication even when using the corresponding primitives.\n",
-    "Thus, you will not see the same improvements in speed as with a backend like `nccl`.\n",
-    "\n",
-    "You may also use the fact that `torch` gradients naturally accumulate if not zeroed out.\n",
-    "Also, scaling the loss by a constant is equivalent to scaling the resulting gradients by the same constant.\n",
-    "\n",
-    "You can rely on receiving messages in the same order they get sent between any device pair.\n",
-    "The `(i)send/recv` functions all support a `tag` attribute to match messages explicitly.\n",
-    "Although using it is good practice, it is not required.\n",
-    "\n",
-    "You can refer to the [documentation](https://pytorch.org/docs/stable/distributed.html) and, if helpful, a related [tutorial](https://brsoff.github.io/tutorials/intermediate/dist_tuto.html) on the PyTorch website."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Exercise B2: Joint Data & Model Parallelism (5 points)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Implement a training setup that uses data and model parallelism together.\n",
-    "\n",
-    "Create 2 pipelines of 3 stages running sequentially, where each stage works with 3 sequential micro-batches.\n",
-    "\n",
-    "Once again, add comments or text explaining your implementation and test it on the setting that mimics those from the class.\n",
-    "\n",
-    "You can use groups from `torch.distributed` to handle reduce operations between a subset of all workers."
    ]
   },
   {
